# start-ddd-and-clean-architecture

./: README.md  compose.yml  integration.json  integration.sh  lefthook.yml
backend_python/: Dockerfile.dev  README.md  main.py  mise.toml  pyproject.toml
backend_python/src/todo_api/: __init__.py
backend_python/src/todo_api/application_service/: __init__.py
backend_python/src/todo_api/application_service/service/: __init__.py  (+1 more)
backend_python/src/todo_api/domain/: __init__.py
backend_python/src/todo_api/infrastructure/: __init__.py
backend_python/src/todo_api/presentation/: __init__.py
backend_python/src/todo_api/repository/: __init__.py  todo_repository.py
backend_python/src/todo_api/utils/: uuid.py
backend_python/stubs/docker/: __init__.pyi  errors.pyi
backend_python/stubs/testcontainers/: __init__.pyi
backend_python/stubs/testcontainers/mysql/: __init__.pyi
backend_python/tests/application_service/usecase/: test_create_todo_usecase.py  test_delete_todo_usecase.py  test_get_all_todos_usecase.py  test_get_todo_usecase.py  test_mark_as_completed_todo_usecase.py  test_mark_as_uncompleted_todo_usecase.py  test_update_todo_usecase.py
backend_python/tests/domain/: test_todo.py
backend_python/tests/infrastructure/: conftest.py
backend_python/tests/infrastructure/repository/: test_context_provider.py  test_todo_repository.py
backend_python/tests/infrastructure/service/: test_transaction_service.py
backend_python/tests/presentation/handler/: test_create_todo_handler.py  test_delete_todo_handler.py  test_get_all_todos_handler.py  test_get_todo_handler.py  test_mark_as_completed_todo_handler.py  test_mark_as_uncompleted_todo_handler.py  test_update_todo_handler.py
backend_python/tests/presentation/middleware/: test_error_handler.py  test_session_middleware.py
backend_python/tests/presentation/router/: test_todo_router.py
backend_rust/: Cargo.toml  Dockerfile.dev  README.md  rustfmt.toml
backend_rust/migrations/: 0001_create_todos.sql
backend_rust/src/: main.rs
backend_rust/src/application/: error.rs  mod.rs
backend_rust/src/application/service/: transaction_service.rs
backend_rust/src/application/usecase/: create_todo_usecase.rs  delete_todo_usecase.rs  get_all_todos_usecase.rs  get_todo_usecase.rs  mark_as_completed_todo_usecase.rs  mark_as_uncompleted_todo_usecase.rs  mod.rs  update_todo_usecase.rs
backend_rust/src/domain/model/: errors.rs  todo.rs
backend_rust/src/domain/repository/: todo_repository.rs
backend_rust/src/infrastructure/: mod.rs  test_support.rs
backend_rust/src/infrastructure/repository/: context_provider.rs  mod.rs  todo_repository.rs
backend_rust/src/infrastructure/service/: transaction_service.rs
backend_rust/src/presentation/: error.rs  mod.rs
backend_rust/src/presentation/handler/: create_todo_handler.rs  delete_todo_handler.rs  get_all_todos_handler.rs  get_todo_handler.rs  mark_as_completed_todo_handler.rs  mark_as_uncompleted_todo_handler.rs  mod.rs  path.rs  update_todo_handler.rs
backend_rust/src/presentation/middleware/: mod.rs  validate.rs
backend_rust/src/presentation/router/: todo_router.rs
(+231 files in other folders)
