[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "mysqlclient>=2.2.7",
    "sqlalchemy>=2.0.43",
    "starlette>=0.48.0",
    "uuid-utils>=0.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pytest>=8.3",
    "testcontainers[mysql]>=4.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.13"
stubPath = ["stubs"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
