[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-valid = { version = "0.16", features = ["json", "validator"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1.6", features = ["serde", "v4", "v7"] }
thiserror = "1.0"
async-trait = "0.1"
tower = { version = "0.4", features = ["util"] }
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
anyhow = "1.0"
testcontainers = "0.20"
